Fixed title and added cubic time function notes

--- a/aceleracion_hardware.html
+++ b/aceleracion_hardware.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aceleración Y ACcesibilidad</title>
+  <title>Aceleración Y Accesibilidad</title>
   <link rel="stylesheet" href="./src/css/aceleracion_hardware.css">
 </head>
 <body>
